# local-hybrid-rag

./: .gitignore  llms.txt  pyproject.toml
hybrid-rag/: hybrid_rag_chat.py  rag-chat.py
